--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.11.0",
     "expo": "^54.0.0",
     "expo-status-bar": "~3.0.8",
+    "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
