--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "invisi-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.1",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.8",
     "axios": "^1.11.0",
     "expo": "^54.0.0",
     "expo-status-bar": "~3.0.8",
@@ -26,8 +28,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.36.0",
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/stack": "^7.4.8",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@types/react-native": "^0.73.0",
