--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.8",
     "axios": "^1.11.0",
-    "expo": "54.0.17",
+    "expo": "54.0.19",
     "expo-status-bar": "~3.0.8",
     "prop-types": "^15.8.1",
     "react": "19.1.0",
@@ -36,6 +36,13 @@
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.4.0",
     "typescript": "^5.9.3"
+  },
+  "expo": {
+    "install": {
+      "exclude": [
+        "expo"
+      ]
+    }
   },
   "private": true
 }
