Mudanca de endpoints

--- a/app.json
+++ b/app.json
@@ -27,7 +27,8 @@
         "INTERNET",
         "ACCESS_NETWORK_STATE"
       ],
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "usesCleartextTraffic": true
     },
     "web": {
       "favicon": "./assets/icon.png"
