--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^7.4.8",
     "axios": "^1.11.0",
     "expo": "54.0.19",
+    "expo-build-properties": "~1.0.9",
     "expo-status-bar": "~3.0.8",
     "prop-types": "^15.8.1",
     "react": "19.1.0",
