--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.11.0",
     "expo": "54.0.19",
     "expo-build-properties": "~1.0.9",
+    "expo-linear-gradient": "^15.0.7",
     "expo-status-bar": "~3.0.8",
     "prop-types": "^15.8.1",
     "react": "19.1.0",
@@ -23,6 +24,7 @@
     "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-gifted-charts": "^1.4.65",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
